# pocket-shell

./: .gitignore  .gitmodules  CLAUDE.md  README.md  package.json  pocket.json  tsconfig.json
app/: app.tsx  main.tsx  pak.json  scenes.ts
app/data/: vfs-mock.ts
app/theme/: skin.ts
app/theme/cooked/: aqua.cooked.ts  win7.cooked.ts  win98.cooked.ts  winxp.cooked.ts  xfce.cooked.ts
crates/pocket-shell-psp/: Cargo.toml  Psp.toml  build.rs
crates/pocket-shell-psp/src/: main.rs
docs/parity/: history.json  index.html
scripts/: desktop.ts  psp.ts
test/: golden.ts
themes-src/: density.ts  strips.json  types.ts
themes-src/paint/: aqua.ts  win7.ts  win98.ts  winxp.ts  xfce.ts
themes-src/sheru/: aqua.json  win7.json  win98.json  winxp.json  xfce.json
tools/: bake-fonts.ts  capture-sheru.ts  cook-lib.ts  cook-themes.ts  gen-assets.ts  gen-cover.ts  parity-board.ts  sync-sheru.ts
